--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
 .App {
-  text-align: center;
+  background-image: url("background.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App .sub {
+  position: absolute;
+  width: calc(26vw + 10px);
+  height: calc(1.6vh + 10px);
+  display: -webkit-box;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-pack: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  -webkit-box-align: center;
+  align-items: center;
+  min-height: 50%;
+  font-size: calc(6vmin);
+  color: #e5f1ba;
+  font-weight: bolder;
+  text-align: center;
+  font-style: italic;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.App .sub.title {
+  top: -18%;
+  left: 36%;
+  color: black;
+  font-style: normal;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .sub.upper {
+  top: 11%;
+  left: 36%;
+}
+
+.App .sub.lower {
+  top: 38.5%;
+  left: 36%;
+}
+
+.App .sub.signup {
+  top: 85%;
+  left: 36%;
+  min-height: 10%;
 }
