--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,6 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  height: 15vh;
-  width: 80vw;
+  height: 13vh;
+  width: 30vh;
 }
